<resources>
    <string name="app_name">GamingHall</string>
    <string name="app_icon">App icon</string>

    <!-- Login and registration -->
    <string name="login">Login</string>
    <string name="registration">Registration</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="or">or log in with</string>

    <string name="sign_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>

    <string name="already_user">Already have an account?</string>
    <string name="new_user">New user?</string>
    <!-- ________________________________________________________ -->

    <!-- Errors -->
    <string name="error_username_already_taken">Username already taken</string>
    <string name="error_email_already_taken">This email is already linked to an existing account</string>

    <string name="error_user_collision">User already exists</string>
    <string name="error_email_not_found">Email does not exists</string>
    <string name="error_password_not_found">Password not right</string>
    <string name="error_google_account_not_found">Login error using Google</string>

    <string name="error_username_invalid">Invalid username</string>
    <string name="error_email_invalid">Invalid email</string>
    <string name="error_password_invalid">Invalid password</string>

    <string name="login_error">Login error</string>">
    <string name="registration_error">Signup error</string>
    <string name="unexpected_error">Error</string>
    <!-- ________________________________________________________ -->

    <!-- Fragments titles -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favourites</string>
    <string name="review">Reviews</string>
    <string name="profile">Profile</string>
    <!-- ________________________________________________________ -->

    <!-- Home fragment -->
    <string name="latest_release">Latest released</string>
    <string name="trending">Trending</string>
    <string name="best_rating">Most rated</string>
    <!-- ________________________________________________________ -->

    <!-- Profile fragment -->
    <string name="change_language">Change language</string>
    <string name="placeholder">Placeholder</string>
    <string name="number_favorite">Favorite games</string>
    <string name="number_review">Reviews</string>
    <string name="delete_account">Delete account</string>
    <!-- ________________________________________________________ -->

</resources>