<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black"
        android:title="@string/home" />
    <item
        android:id="@+id/fragment_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black"
        android:title="@string/search"/>
    <item
        android:id="@+id/fragment_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_fill_black"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/fragment_review"
        android:enabled="true"
        android:icon="@drawable/ic_review_black"
        android:title="@string/review"/>
    <item
        android:id="@+id/fragment_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_black"
        android:title="@string/profile"/>
</menu>